--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "pinia": "^2.1.7",
-    "primevue": "^3.52.0",
+    "primeicons": "^7.0.0",
+    "primevue": "4.0.0-beta.3",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
@@ -35,6 +36,7 @@
     "prettier": "^3.2.5",
     "sass": "^1.77.1",
     "typescript": "~5.4.0",
+    "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vue-tsc": "^2.0.11"
