--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.9.0",
+    "firebase": "^10.12.0",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "4.0.0-beta.3",
