--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "firebase": "^10.12.0",
+    "firebase-admin": "^12.1.0",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "4.0.0-beta.3",
