--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.9.0",
+    "animate.css": "^4.1.1",
     "firebase": "^10.12.0",
     "firebase-admin": "^12.1.0",
     "pinia": "^2.1.7",
